syntax = "proto3";

package ai.metathings.service.identityd2;
option go_package = "github.com/nayotta/metathings/proto/identityd2";

import "model.proto";

message ListGroupsForSubjectRequest {
	OpEntity subject = 1;
}

message ListGroupsForSubjectResponse {
	repeated Group groups = 1;
}
